# jhjh

./: .replit  api.py  app.py  credent.py  database.py  db_lr.py  draft.py  hybrid.py  insert.py  notes.txt  pyproject.toml  reports.py  requirements.txt  session.py  tables.py  test.py  users.py
static/: index.css  login.css  report.css  report.js
templates/: ajax.html  app_form.html  draft.html  home.html  login.html  nav.html  report.html  reportdata.html  reportslog.html
